# scatter

./: .gitignore  CMakeLists.txt  README.md  input.json  scatter_doc.md  tmpdat
pages/: index.md
src/: CMakeLists.txt  constants.f90  integrate.f90  main.f90  potential_type.f90  precision.F90  solver_type.f90  special_functions.f90
test/: CMakeLists.txt  sigmadat_ref  test_integrate.pf  test_solve.pf  test_special_functions.pf
